--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-hi
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+      Anton Selitskiy's page
+    </title>
+  </head>
+  <body>
+    <h1>Anton Selitskiy (Selitskii)</h1>
+    
+    <img src="profile-pic.png"> 
+    <p>
+      hi
+    </p>
+    
+    <p>
+      hi
+    </p>
+  </body>
+</html>
