--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Anton Selitskiy (Selitskii)</h1>
     
-    <img src="profile-pic.png"> 
+    <img src="profile-pic.png" alt="Nicola Tesla at Niagara Falls" width="500"> 
     <p>
       hi
     </p>
