--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   </head>
   <body>
     <h1>Anton Selitskiy (Selitskii)</h1>
-    
+    <p>
+      My github: <a href="https://github.com/anton-selitskiy">https://github.com/anton-selitskiy</a>
+    </p>  
     <img src="profile-pic.png" alt="Nicola Tesla at Niagara Falls" width="500"> 
     <p>
-      hi
+      Hi, my name is Anton Selitskiy, I am working on my second PhD in AIRLab (Audio Information Research) at the University of Rochester.
+      My thirst PhD in parabolic differential equations (from Moscow State University) is very beneficial for the current research in diffusion-denoising models. 
     </p>
     
     <p>
-      hi
+      I believe, any research should be harmless, that is why in our lab in addition to generative models we work on the detection of deep fake.
     </p>
   </body>
 </html>
