--- a/index.html
+++ b/index.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-      Anton Selitskiy's page
-    </title>
-  </head>
-  <body>
-    <h1>Anton Selitskiy (Selitskii)</h1>
-    <p>
-      My github: <a href="https://github.com/anton-selitskiy">https://github.com/anton-selitskiy</a>
-    </p>  
-    <img src="profile-pic.png" alt="Nicola Tesla at Niagara Falls" width="500"> 
-    <p>
-      Hi, my name is Anton Selitskiy, I am working on my second PhD in AIRLab (Audio Information Research) at the University of Rochester.
-      My thirst PhD in parabolic differential equations (from Moscow State University) is very beneficial for the current research in diffusion-denoising models. 
-    </p>
-    
-    <p>
-      I believe, any research should be harmless, that is why in our lab in addition to generative models we work on the detection of deep fake.
-    </p>
-  </body>
+<head>
+<title>Anton Selitskiy</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="./style.css">
+</head>
+<body>
+<h1>Anton Selitskiy</h1>
+<h2>Visiting Lecturer Department of Computer Science <a href="https://www.rit.edu/directory/amsvcs-anton-selitskiy" target="_blank">official RIT page</a></h2>
+<p>
+<img src="./IMG_0094_cut.jpg" width="200"> <!-- "http://www.cs.rit.edu/images/construction.gif"-->
+<h3>Courses</h3>
+<a href="https://github.com/anton-selitskiy/RIT_ML" target="_blank">CSCI-335 Machine Learning</a>
+<br>
+<a href="https://github.com/anton-selitskiy/RIT_LLM" target="_blank">CSCI-539 Large Language Models</a>
+<h3>Teaching Philosophy</h3>
+I firmly believe that motivation and understanding are the cornerstones of effective education. 
+Over my 10 years of teaching experience, I have found that students truly enjoy studying 
+when they grasp the underlying concepts and purpose behind what they are learning.
+<h3>Research Topics</h3>
+Spatial Audio and Human - Computer Interaction
+<br>
+Bayessian Machine Learning
+<br>
+Differential Equations and Functional Analisys
+<h3>Main Publications</h3>
+A.M. Selitskiy and V.P. Vetrov, Bayessian Machine Learning (in progress)
+<br>
+G. Zhu, F. Jiang, J. Darefsky, A. Selitskiy, and Zh. Duan, Music Source Separation with Generative Flow // IEEE 
+Signal Processing Letters, 29 (2022), 2288 - 2292
+<br>
+M.S. Agranovich and A.M. Selitskii, Fractional powers of operators corresponding to coercive problems in Lipschitz domains //
+Functional Analysis and Its Applications. 2013. V. 47, N 2. P. 83 - 95.
+<h3>Contacts</h3>
+<address>
+Anton Selitskiy
+<br>
+Rochester Institute of Technology
+<br>
+Golisano College of Computing and Information Sciences
+<br>
+20 Lomb Memorial Drive
+<br>
+Rochester, NY 14623-5608
+<br>
+Office GOL-3701
+<br>
+amsvcs@rit.edu
+</address>
+</body>
 </html>
