--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 </head>
 <body>
 <h1>Anton Selitskiy</h1>
-<h2>Visiting Lecturer Department of Computer Science <a href="https://www.rit.edu/directory/amsvcs-anton-selitskiy" target="_blank">official RIT page</a></h2>
+<h2>Graduate Student at the University of Rochester (2020-2026) </h2>
+<h2>Visiting Lecturer Department of Computer Science (2023-2025) <a href="https://www.rit.edu/directory/amsvcs-anton-selitskiy" target="_blank">official RIT page</a></h2>
 <p>
 <img src="./IMG_0094_cut.jpg" width="200"> <!-- "http://www.cs.rit.edu/images/construction.gif"-->
 <h3>Courses</h3>
-<a href="https://github.com/anton-selitskiy/RIT_ML" target="_blank">CSCI-335 Machine Learning</a>
+<a href="https://www.youtube.com/playlist?list=PLYzwSXAOsA4xr-EJovGeLchQh7jAMv0cy" target="_blank">CSCI-141 Computer Science I (only video)</a>
 <br>
-<a href="https://github.com/anton-selitskiy/RIT_LLM" target="_blank">CSCI-539 Large Language Models</a>
+<a href="https://github.com/anton-selitskiy/RIT_ML" target="_blank">CSCI-335 Machine Learning (course materials and recorded lectures)</a>
+<br>
+<a href="https://github.com/anton-selitskiy/RIT_LLM" target="_blank">CSCI-539 Large Language Models (course materials and recorded lectures)</a>
 <h3>Teaching Philosophy</h3>
 I firmly believe that motivation and understanding are the cornerstones of effective education. 
 Over my 10 years of teaching experience, I have found that students truly enjoy studying 
@@ -36,17 +39,15 @@ Functional Analysis and Its Applications. 2013. V. 47, N 2. P. 83 - 95.
 <address>
 Anton Selitskiy
 <br>
-Rochester Institute of Technology
+University of Rochester
 <br>
-Golisano College of Computing and Information Sciences
+Computer Studies Building
 <br>
-20 Lomb Memorial Drive
+Rochester, NY 14627-0231
 <br>
-Rochester, NY 14623-5608
+Office CSB-606
 <br>
-Office GOL-3701
-<br>
-amsvcs@rit.edu
+aselitsk@ur.rochester.edu
 </address>
 </body>
 </html>
