--- a/index.html
+++ b/index.html
@@ -7,10 +7,30 @@
 </head>
 <body>
 <h1>Anton Selitskiy</h1>
-<h2>Graduate Student at the University of Rochester (2020-2026) </h2>
-<h2>Visiting Lecturer Department of Computer Science (2023-2025) <a href="https://www.rit.edu/directory/amsvcs-anton-selitskiy" target="_blank">official RIT page</a></h2>
 <p>
 <img src="./IMG_0094_cut.jpg" width="200"> <!-- "http://www.cs.rit.edu/images/construction.gif"-->
+<h3>Education</h3>
+University of Rochester PhD ECE 05/2022 - 05/2026
+<br>
+University of Rochester MS ECE 08/2020 - 05/2022
+<br>
+Russian Academy of Music MA Opera Performance 09/2008 - 06/2013
+<br>
+Moscow State University PhD Mathematics 05/2004 - 04/2007
+<br>
+Moscow Aviation Institute BS/MS Applied Mathematics 09/1998 - 03/2004
+<h3>Appointments</h3>
+Visiting Lecturer, Rochester Institute of Technology, Rochester (NY) 08/2023 - 05/2025 <a href="https://www.rit.edu/directory/amsvcs-anton-selitskiy" target="_blank">official RIT page</a>
+<br>
+Research Assistant, University of Rochester, Rochester (NY) 09/2021 - 12/2022
+<br>
+Senior Researcher, Russian Academy of Sciences, Moscow (Russia) 01/2012 - 06/2018
+<br>
+Associate Professor, Moscow Aviation Institute, Moscow (Russia) 10/2008 - 01/2012
+<br>
+Senior Lecturer, Moscow Aviation Institute, Moscow (Russia) 09/2007 - 08/2008
+<br>
+Lecturer, Moscow Aviation Institute, Moscow (Russia) 03/2004 - 06/2005
 <h3>Courses</h3>
 <a href="https://www.youtube.com/playlist?list=PLYzwSXAOsA4xr-EJovGeLchQh7jAMv0cy" target="_blank">CSCI-141 Computer Science I (only video)</a>
 <br>
