--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Anton Selitskiy</title>
+<title>Anton Selitskiy </title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<h1>Anton Selitskiy</h1>
+<h1>Anton Selitskiy <a href="https://github.com/anton-selitskiy/anton-selitskiy.github.io/blob/main/Selitskiy_CV.pdf">CV</a></h1>
 <p>
 <img src="./IMG_0094_cut.jpg" width="200"> <!-- "http://www.cs.rit.edu/images/construction.gif"-->
 <h3>Education</h3>
@@ -47,7 +47,7 @@ Spatial Audio and Human - Computer Interaction
 Bayessian Machine Learning
 <br>
 Differential Equations and Functional Analisys
-<h3>Main Publications</h3>
+<h3>Main Publications <a href="https://scholar.google.com/citations?user=w1zSyHUAAAAJ&hl">Google Scholar</a>  <a href="https://github.com/anton-selitskiy/anton-selitskiy.github.io/blob/main/Selitskiy_Publications.pdf">all</a></h3>
 A.M. Selitskiy and V.P. Vetrov, Bayessian Machine Learning (in progress)
 <br>
 G. Zhu, F. Jiang, J. Darefsky, A. Selitskiy, and Zh. Duan, Music Source Separation with Generative Flow // IEEE 
