--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@ Differential Equations and Functional Analisys
 <h3>Main Publications <a href="https://scholar.google.com/citations?user=w1zSyHUAAAAJ&hl">Google Scholar</a>  <a href="https://github.com/anton-selitskiy/anton-selitskiy.github.io/blob/main/Selitskiy_Publications.pdf">all</a></h3>
 A.M. Selitskiy and V.P. Vetrov, Bayessian Machine Learning (in progress)
 <br>
+A. Selitskiy and M. Kocharekar, Discrete Optimal Transport and Voice Conversion (2025)<a href="https://anton-selitskiy.github.io/dotvc/">progect page</a>
+<br>
 G. Zhu, F. Jiang, J. Darefsky, A. Selitskiy, and Zh. Duan, Music Source Separation with Generative Flow // IEEE 
-Signal Processing Letters, 29 (2022), 2288 - 2292
+Signal Processing Letters, 29 (2022), 2288 - 2292 <a href="https://github.com/gzhu06/GenerativeSourceSeparation">project page</a>
 <br>
 M.S. Agranovich and A.M. Selitskii, Fractional powers of operators corresponding to coercive problems in Lipschitz domains //
 Functional Analysis and Its Applications. 2013. V. 47, N 2. P. 83 - 95.
