--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ Lecturer, Moscow Aviation Institute, Moscow (Russia) 03/2004 - 06/2005
 <a href="https://github.com/anton-selitskiy/RIT_ML" target="_blank">CSCI-335 Machine Learning (course materials and recorded lectures)</a>
 <br>
 <a href="https://github.com/anton-selitskiy/RIT_LLM" target="_blank">CSCI-539 Large Language Models (course materials and recorded lectures)</a>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; Bayesian Deep Learning - Independent Study Course (Spring 2024)
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; CSCI-665 Theory of Algorithms (Spring 2024)
 <h3>Teaching Philosophy</h3>
 I firmly believe that motivation and understanding are the cornerstones of effective education. 
 Over my 10 years of teaching experience, I have found that students truly enjoy studying 
