--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Differential Equations and Functional Analisys
 <h3>Main Publications <a href="https://scholar.google.com/citations?user=w1zSyHUAAAAJ&hl">Google Scholar</a>  <a href="https://github.com/anton-selitskiy/anton-selitskiy.github.io/blob/main/Selitskiy_Publications.pdf">all</a></h3>
 A.M. Selitskiy and V.P. Vetrov, Bayessian Machine Learning (in progress)
 <br>
+A. Selitskiy, A. Shahriyar, and J. Prakasan, Discrete optimal transport is a strong audio adversarial attack // ICASSP, May 4-8, 2026, Barcelona, Spain (under review) <a href="https://arxiv.org/abs/2509.14959">read</a>a  
+<br>  
 A. Selitskiy and M. Kocharekar, Discrete Optimal Transport and Voice Conversion (2025)<a href="https://anton-selitskiy.github.io/dotvc/">progect page</a>
 <br>
 G. Zhu, F. Jiang, J. Darefsky, A. Selitskiy, and Zh. Duan, Music Source Separation with Generative Flow // IEEE 
